tests/invalid/invalid_assignment.lang
extern fn main() i32 {
    1 = 1;
    return 0;
}
